--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(1 0 0);
+  --background: #242424;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -122,3 +122,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/*
+deep black (#1E1E1E), 
+sky blue (#00BFFF), 
+vivid orange (#FF4500), 
+bright gold (#FFD700),
+rich purple (#8A2BE2)
+$/
