--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
-#unity-container { position: relative }
-#unity-container.unity-desktop { width: 960px; height: 600px }
+#unity-container { position: relative; display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; }
+#unity-container.unity-desktop { max-width: 960px; min-height: 600px }
 #unity-container.unity-mobile { width: 100%; height: 100% }
-#unity-canvas { background: #231F20 }
+#unity-canvas { background: #231F20; border-radius: 0.5rem; }
 .unity-mobile #unity-canvas { width: 100%; height: 100% }
-#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
+#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none; z-index: 10; }
 #unity-logo { width: 154px; height: 130px; background: url('/game/TemplateData/unity-logo-dark.png') no-repeat center }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('/game/TemplateData/progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('/game/TemplateData/progress-bar-full-dark.png') no-repeat center }
-#unity-footer { position: relative }
+#unity-footer { position: relative; width: 100%; padding: 0.5rem; margin-top: 1rem; display: flex; align-items: center; justify-content: space-between; }
 .unity-mobile #unity-footer { display: none }
-#unity-logo-title-footer { float:left; width: 102px; height: 38px; background: url('/game/TemplateData/unity-logo-title-footer.png') no-repeat center }
-#unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
-#unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('/game/TemplateData/fullscreen-button.png') no-repeat center }
-#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none } 
+#unity-logo-title-footer { width: 102px; height: 38px; background: url('/game/TemplateData/unity-logo-title-footer.png') no-repeat center }
+#unity-build-title { margin-right: 10px; line-height: 38px; font-family: system-ui, -apple-system, sans-serif; font-size: 18px }
+#unity-fullscreen-button { cursor: pointer; width: 38px; height: 38px; background: url('/game/TemplateData/fullscreen-button.png') no-repeat center }
+#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none; border-radius: 0.5rem; z-index: 20; } 
