--- a/src/pages/UnityGame.css
+++ b/src/pages/UnityGame.css
@@ -1,13 +1,18 @@
 #unity-container {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
+
 }
 
 #unity-container.unity-desktop {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: none;
+  left: auto;
+  top: auto;
 }
 
 #unity-container.unity-mobile {
