--- a/src/pages/UnityGame.css
+++ b/src/pages/UnityGame.css
@@ -25,10 +25,10 @@
   background: #231F20;
 }
 
-.unity-mobile #unity-canvas {
+/* .unity-mobile #unity-canvas {
   width: 100%;
   height: 100%;
-}
+} */
 
 #unity-loading-bar {
   position: absolute;
